--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Movies guess or don't</title>
+
+    <link rel="stylesheet" type="css/text" href="./assets/css/style.css">
+    <script src="./assets/javascript/game.js"></script>
 </head>
 <body>
-    
+    <h1>Movie guess or Don't</h1>
+    <p>Rules: You have six (6) to try and guess the movie titles. Good luck!!</p>
+    <img>
 </body>
 </html>
