adding images and somestyling to page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
 <body>
     <h1>Movie guess or Don't</h1>
     <p>Rules: You have six (6) to try and guess the movie titles. Good luck!!</p>
-    <img>
+    <div class="1guess">
+        <img src="./assets/images/one guess.jpg" alt="1st guess wrong">
+    </div>
+    <div class="2guess">
+        <img src="./assets/images/second guess.jpg" alt="2nd guess wrong">
+    </div>
+    <div class="3guess">
+        <img src="./assets/images/third guess.jpg" alt="3rd guess wrong">
+    </div>
+    <div class="4guess">
+        <img src="./assets/images/fourth guess.jpg" alt="4th guess wrong">
+    </div>
+    <div class="5guess">
+        <img src="./assets/images/fifth guess.jpg" alt="5th guess wrong">
+    </div>
+    <div class="6guess">
+        <img src="./assets/images/final guess.jpg" alt="Last Chance guess wrong">
+    </div>
 </body>
 </html>
