--- a/Index2.html
+++ b/Index2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Are you in my Head</title>
-    <script src="./"></script>
+    <script src="/assets/javascript/game.js"></script>
     
 </head>
 <body>
