--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Movies guess or don't</title>
 
     <link rel="stylesheet" type="css/text" href="./assets/css/style.css">
-    <script src="./assets/javascript/game.js"></script>
+    
 </head>
 <body>
-    <h1>Movie guess or Don't</h1>
+    <!-- <h1>Movie guess or Don't</h1>
     <p>Rules: You have six (6) to try and guess the movie titles. Good luck!!</p>
     <div class="1guess">
         <img src="./assets/images/one guess.jpg" alt="1st guess wrong">
@@ -29,6 +29,6 @@
     </div>
     <div class="6guess">
         <img src="./assets/images/final guess.jpg" alt="Last Chance guess wrong">
-    </div>
+    </div> -->
 </body>
 </html>
